multi_planes.par

--- a/tests/merging_yaml.ipynb
+++ b/tests/merging_yaml.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Merged data written to tests/testing_fodder/parameters/merged_parameters.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
     "import os\n",
@@ -21,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +29,7 @@
        " 'orient.par': openptv_python.parameters.OrientationPar}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,14 +53,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'multi_planes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb Cell 3\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W1sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     par_content \u001b[39m=\u001b[39m yaml\u001b[39m.\u001b[39msafe_load(file)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W1sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m# Here we need to read the content into a respective class and \u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W1sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39m# store it with the paramater name as the key\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W1sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m par_class \u001b[39m=\u001b[39m par_dict[title]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W1sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m par_content \u001b[39m=\u001b[39m par_class(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mpar_content)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W1sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39m# Add the dictionary to the merged data with the title as the key\u001b[39;00m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'multi_planes'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Define the directory containing the .par files\n",
-    "directory_path = 'tests/testing_fodder/parameters'\n",
-    "output_yaml_file = 'tests/testing_fodder/parameters/merged_parameters.yaml'\n",
+    "directory_path = 'testing_fodder/parameters'\n",
+    "output_yaml_file = 'merged_parameters.yaml'\n",
     "\n",
     "# Initialize an empty dictionary to store the merged data\n",
     "merged_data = {}\n",
@@ -99,6 +103,31 @@
     "\n",
     "print(f'Merged data written to {output_yaml_file}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/user/Documents/repos/openptvpy/openptv-python/tests'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
