updated everything with the list of floats instead of np.array and from_file() as class methods

--- a/tests/merging_yaml.ipynb
+++ b/tests/merging_yaml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,58 +13,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'cal_ori.par': openptv_python.parameters.CalibrationPar,\n",
-       " 'detect_plate.par': openptv_python.parameters.TargetPar,\n",
-       " 'track.par': openptv_python.parameters.TrackPar,\n",
-       " 'ptv.par': openptv_python.parameters.ControlPar,\n",
-       " 'criteria.par': openptv_python.parameters.VolumePar,\n",
-       " 'sequence.par': openptv_python.parameters.SequencePar,\n",
-       " 'targ_rec.par': openptv_python.parameters.TargetPar,\n",
-       " 'orient.par': openptv_python.parameters.OrientationPar}"
+       "{'cal_ori': openptv_python.parameters.CalibrationPar,\n",
+       " 'detect_plate': openptv_python.parameters.TargetPar,\n",
+       " 'track': openptv_python.parameters.TrackPar,\n",
+       " 'multi_planes': openptv_python.parameters.MultiPlanesPar,\n",
+       " 'ptv': openptv_python.parameters.ControlPar,\n",
+       " 'criteria': openptv_python.parameters.VolumePar,\n",
+       " 'sequence': openptv_python.parameters.SequencePar,\n",
+       " 'targ_rec': openptv_python.parameters.TargetPar,\n",
+       " 'orient': openptv_python.parameters.OrientationPar}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# dictionary that connects the .par file names and the respective parameter classes\n",
-    "from openptv_python.parameters import OrientationPar, SequencePar,VolumePar,CalibrationPar, ControlPar, TargetPar, TrackPar\n",
+    "from openptv_python.parameters import OrientPar, \\\n",
+    "    SequencePar,VolumePar,CalibrationPar, ControlPar, TargetPar, TrackPar, MultiPlanesPar\n",
     "\n",
-    "par_dict = {'cal_ori.par': CalibrationPar, \n",
-    "            'detect_plate.par':TargetPar,\n",
-    "            'track.par': TrackPar,\n",
-    "            # 'multi_planes.par':MultiPlanePar,\n",
-    "            'ptv.par': ControlPar,\n",
-    "            'criteria.par':VolumePar,\n",
-    "            'sequence.par':SequencePar,\n",
-    "            'targ_rec.par': TargetPar,\n",
-    "            'orient.par' : OrientationPar\n",
+    "par_dict = {'cal_ori': CalibrationPar, \n",
+    "            'detect_plate':TargetPar,\n",
+    "            'track': TrackPar,\n",
+    "            'multi_planes':MultiPlanesPar,\n",
+    "            'ptv': ControlPar,\n",
+    "            'criteria':VolumePar,\n",
+    "            'sequence':SequencePar,\n",
+    "            'targ_rec': TargetPar,\n",
+    "            'orient' : OrientPar\n",
     "            }\n",
     "par_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "multi_planes\n",
+      "MultiPlanesPar(planes=3, multi_filename=['img/calib_a_cam', 'img/calib_b_cam', 'img/calib_c_cam'])\n",
+      "criteria\n",
+      "None\n",
+      "track\n",
+      "None\n",
+      "targ_rec_all_different_fields\n"
+     ]
+    },
+    {
      "ename": "KeyError",
-     "evalue": "'multi_planes'",
+     "evalue": "'targ_rec_all_different_fields'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb Cell 3\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W1sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m     par_content \u001b[39m=\u001b[39m yaml\u001b[39m.\u001b[39msafe_load(file)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W1sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m# Here we need to read the content into a respective class and \u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W1sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39m# store it with the paramater name as the key\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W1sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m par_class \u001b[39m=\u001b[39m par_dict[title]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W1sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m par_content \u001b[39m=\u001b[39m par_class(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mpar_content)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W1sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39m# Add the dictionary to the merged data with the title as the key\u001b[39;00m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'multi_planes'"
+      "\u001b[1;32m/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb Cell 3\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W2sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(title)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W2sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m# Read the content of the .par file and convert it to a dictionary\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W2sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39m# with open(file_path, 'r') as file:\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W2sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m#     par_content = yaml.safe_load(file)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W2sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W2sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39m# Here we need to read the content into a respective class and \u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W2sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39m# store it with the paramater name as the key\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W2sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m par_class \u001b[39m=\u001b[39m par_dict[title]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W2sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m par_content \u001b[39m=\u001b[39m par_class()\u001b[39m.\u001b[39mfrom_file(file_path)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/user/Documents/repos/openptvpy/openptv-python/tests/merging_yaml.ipynb#W2sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39m# par_content = par_class(**par_content)\u001b[39;00m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'targ_rec_all_different_fields'"
      ]
     }
    ],
@@ -79,20 +94,24 @@
     "\n",
     "# Find all .par files in the specified directory\n",
     "par_files = glob.glob(os.path.join(directory_path, '*.par'))\n",
+    "# print(par_files)\n",
     "\n",
     "# Iterate through each .par file\n",
     "for file_path in par_files:\n",
     "    # Extract the title from the file name (assuming the file name is something like \"title.par\")\n",
     "    title = os.path.splitext(os.path.basename(file_path))[0]\n",
+    "    print(title)\n",
     "\n",
     "    # Read the content of the .par file and convert it to a dictionary\n",
-    "    with open(file_path, 'r') as file:\n",
-    "        par_content = yaml.safe_load(file)\n",
+    "    # with open(file_path, 'r') as file:\n",
+    "    #     par_content = yaml.safe_load(file)\n",
     "\n",
     "    # Here we need to read the content into a respective class and \n",
     "    # store it with the paramater name as the key\n",
     "    par_class = par_dict[title]\n",
-    "    par_content = par_class(**par_content)\n",
+    "    par_content = par_class().from_file(file_path)\n",
+    "    # par_content = par_class(**par_content)\n",
+    "    print(par_content)\n",
     "    \n",
     "    # Add the dictionary to the merged data with the title as the key\n",
     "    merged_data[title] = par_content\n",
@@ -110,9 +129,59 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['testing_fodder/parameters/multi_planes.par', 'testing_fodder/parameters/criteria.par', 'testing_fodder/parameters/track.par', 'testing_fodder/parameters/targ_rec_all_different_fields.par', 'testing_fodder/parameters/detect_plate.par', 'testing_fodder/parameters/sequence.par', 'testing_fodder/parameters/shaking.par', 'testing_fodder/parameters/man_ori.par', 'testing_fodder/parameters/orient.par', 'testing_fodder/parameters/targ_rec.par', 'testing_fodder/parameters/examine.par', 'testing_fodder/parameters/cal_ori.par', 'testing_fodder/parameters/ptv.par', 'testing_fodder/parameters/pft_version.par', 'testing_fodder/parameters/dumbbell.par', 'testing_fodder/parameters/sortgrid.par']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'/home/user/Documents/repos/openptvpy/openptv-python/tests'"
+       "'testing_fodder/parameters/multi_planes.par'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define the directory containing the .par files\n",
+    "directory_path = 'testing_fodder/parameters'\n",
+    "output_yaml_file = 'merged_parameters.yaml'\n",
+    "\n",
+    "# Initialize an empty dictionary to store the merged data\n",
+    "merged_data = {}\n",
+    "\n",
+    "# Find all .par files in the specified directory\n",
+    "par_files = glob.glob(os.path.join(directory_path, '*.par'))\n",
+    "print(par_files)\n",
+    "\n",
+    "file_path = par_files[0]\n",
+    "file_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title = os.path.splitext(os.path.basename(file_path))[0]\n",
+    "par_class = par_dict[title]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'planes': 3,\n",
+       " 'multi_filename': ['img/calib_a_cam', 'img/calib_b_cam', 'img/calib_c_cam']}"
       ]
      },
      "execution_count": 7,
@@ -120,13 +189,38 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "par_class().from_file(file_path).to_yaml(output_yaml_file)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file_cam0_frame00000.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmp = 'file_cam%d_frame%05d.tif'\n",
+    "print(tmp % (0, 0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tmp % (1,1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
