--- a/tests/test_with_yaml.ipynb
+++ b/tests/test_with_yaml.ipynb
@@ -144,7 +144,7 @@
     {
      "data": {
       "text/plain": [
-       "ControlPar(num_cams=4, img_base_name=['dumbbell/cam1_Scene77_4085', 'dumbbell/cam2_Scene77_4085', 'dumbbell/cam3_Scene77_4085', 'dumbbell/cam4_Scene77_4085'], cal_img_base_name=['cal/cam1.tif', 'cal/cam2.tif', 'cal/cam3.tif', 'cal/cam4.tif'], hp_flag=1, allCam_flag=0, tiff_flag=1, imx=1280, imy=1024, pix_x=0.017, pix_y=0.017, chfield=0, mm=MultimediaPar(nlay=1, n1=1.0, n2=[1.49], d=[5.0], n3=1.33))"
+       "ControlPar(num_cams=4, img_base_name=['dumbbell/cam1_Scene77_4085', 'dumbbell/cam2_Scene77_4085', 'dumbbell/cam3_Scene77_4085', 'dumbbell/cam4_Scene77_4085'], cal_img_base_name=['cal/cam1.tif', 'cal/cam2.tif', 'cal/cam3.tif', 'cal/cam4.tif'], hp_flag=1, all_cam_flag=0, tiff_flag=1, imx=1280, imy=1024, pix_x=0.017, pix_y=0.017, chfield=0, mm=MultimediaPar(nlay=1, n1=1.0, n2=[1.49], d=[5.0], n3=1.33))"
       ]
      },
      "execution_count": 5,
@@ -189,7 +189,7 @@
        "  'cal/cam3.tif',\n",
        "  'cal/cam4.tif'],\n",
        " 'hp_flag': 1,\n",
-       " 'allCam_flag': 0,\n",
+       " 'all_cam_flag': 0,\n",
        " 'tiff_flag': 1,\n",
        " 'imx': 1280,\n",
        " 'imy': 1024,\n",
@@ -226,7 +226,7 @@
        "  'cal/cam3.tif',\n",
        "  'cal/cam4.tif'],\n",
        " 'hp_flag': 1,\n",
-       " 'allCam_flag': 0,\n",
+       " 'all_cam_flag': 0,\n",
        " 'tiff_flag': 1,\n",
        " 'imx': 1280,\n",
        " 'imy': 1024,\n",
@@ -255,7 +255,7 @@
      "output_type": "stream",
      "text": [
       "Read parameters from YAML file:\n",
-      "{'allCam_flag': 0, 'cal_img_base_name': ['cal/cam1.tif', 'cal/cam2.tif', 'cal/cam3.tif', 'cal/cam4.tif'], 'chfield': 0, 'hp_flag': 1, 'img_base_name': ['dumbbell/cam1_Scene77_4085', 'dumbbell/cam2_Scene77_4085', 'dumbbell/cam3_Scene77_4085', 'dumbbell/cam4_Scene77_4085'], 'imx': 1280, 'imy': 1024, 'mm': {'d': [5.0], 'n1': 1.0, 'n2': [1.49], 'n3': 1.33, 'nlay': 1}, 'num_cams': 4, 'pix_x': 0.017, 'pix_y': 0.017, 'tiff_flag': 1}\n"
+      "{'all_cam_flag': 0, 'cal_img_base_name': ['cal/cam1.tif', 'cal/cam2.tif', 'cal/cam3.tif', 'cal/cam4.tif'], 'chfield': 0, 'hp_flag': 1, 'img_base_name': ['dumbbell/cam1_Scene77_4085', 'dumbbell/cam2_Scene77_4085', 'dumbbell/cam3_Scene77_4085', 'dumbbell/cam4_Scene77_4085'], 'imx': 1280, 'imy': 1024, 'mm': {'d': [5.0], 'n1': 1.0, 'n2': [1.49], 'n3': 1.33, 'nlay': 1}, 'num_cams': 4, 'pix_x': 0.017, 'pix_y': 0.017, 'tiff_flag': 1}\n"
      ]
     }
    ],
@@ -286,7 +286,7 @@
      "output_type": "stream",
      "text": [
       "Read merged data from YAML file with titles Title1 and Title2:\n",
-      "{'Title1': {'param1': 4, 'param2': ['dumbbell/cam1_Scene77_4085', 'cal/cam1.tif', 'dumbbell/cam2_Scene77_4085', 'cal/cam2.tif', 'dumbbell/cam3_Scene77_4085', 'cal/cam3.tif', 'dumbbell/cam4_Scene77_4085', 'cal/cam4.tif'], 'param3': [1, 0, 1, 1280, 1024, 0.017, 0.017, 0, 1, 1.49, 1.33, 5]}, 'Title2': {'allCam_flag': 0, 'cal_img_base_name': ['cal/cam1.tif', 'cal/cam2.tif', 'cal/cam3.tif', 'cal/cam4.tif'], 'chfield': 0, 'hp_flag': 1, 'img_base_name': ['dumbbell/cam1_Scene77_4085', 'dumbbell/cam2_Scene77_4085', 'dumbbell/cam3_Scene77_4085', 'dumbbell/cam4_Scene77_4085'], 'imx': 1280, 'imy': 1024, 'mm': {'d': [5.0], 'n1': 1.0, 'n2': [1.49], 'n3': 1.33, 'nlay': 1}, 'num_cams': 4, 'pix_x': 0.017, 'pix_y': 0.017, 'tiff_flag': 1}}\n"
+      "{'Title1': {'param1': 4, 'param2': ['dumbbell/cam1_Scene77_4085', 'cal/cam1.tif', 'dumbbell/cam2_Scene77_4085', 'cal/cam2.tif', 'dumbbell/cam3_Scene77_4085', 'cal/cam3.tif', 'dumbbell/cam4_Scene77_4085', 'cal/cam4.tif'], 'param3': [1, 0, 1, 1280, 1024, 0.017, 0.017, 0, 1, 1.49, 1.33, 5]}, 'Title2': {'all_cam_flag': 0, 'cal_img_base_name': ['cal/cam1.tif', 'cal/cam2.tif', 'cal/cam3.tif', 'cal/cam4.tif'], 'chfield': 0, 'hp_flag': 1, 'img_base_name': ['dumbbell/cam1_Scene77_4085', 'dumbbell/cam2_Scene77_4085', 'dumbbell/cam3_Scene77_4085', 'dumbbell/cam4_Scene77_4085'], 'imx': 1280, 'imy': 1024, 'mm': {'d': [5.0], 'n1': 1.0, 'n2': [1.49], 'n3': 1.33, 'nlay': 1}, 'num_cams': 4, 'pix_x': 0.017, 'pix_y': 0.017, 'tiff_flag': 1}}\n"
      ]
     }
    ],
@@ -338,7 +338,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ControlPar(num_cams=4, img_base_name=['dumbbell/cam1_Scene77_4085', 'dumbbell/cam2_Scene77_4085', 'dumbbell/cam3_Scene77_4085', 'dumbbell/cam4_Scene77_4085'], cal_img_base_name=['cal/cam1.tif', 'cal/cam2.tif', 'cal/cam3.tif', 'cal/cam4.tif'], hp_flag=1, allCam_flag=0, tiff_flag=1, imx=1280, imy=1024, pix_x=0.017, pix_y=0.017, chfield=0, mm=MultimediaPar(nlay=1, n1=1.0, n2=[1.49], d=[5.0], n3=1.33))\n"
+      "ControlPar(num_cams=4, img_base_name=['dumbbell/cam1_Scene77_4085', 'dumbbell/cam2_Scene77_4085', 'dumbbell/cam3_Scene77_4085', 'dumbbell/cam4_Scene77_4085'], cal_img_base_name=['cal/cam1.tif', 'cal/cam2.tif', 'cal/cam3.tif', 'cal/cam4.tif'], hp_flag=1, all_cam_flag=0, tiff_flag=1, imx=1280, imy=1024, pix_x=0.017, pix_y=0.017, chfield=0, mm=MultimediaPar(nlay=1, n1=1.0, n2=[1.49], d=[5.0], n3=1.33))\n"
      ]
     }
    ],
@@ -349,7 +349,7 @@
     "    'img_base_name': ['dumbbell/cam1_Scene77_4085', 'dumbbell/cam2_Scene77_4085', 'dumbbell/cam3_Scene77_4085', 'dumbbell/cam4_Scene77_4085'],\n",
     "    'cal_img_base_name': ['cal/cam1.tif', 'cal/cam2.tif', 'cal/cam3.tif', 'cal/cam4.tif'],\n",
     "    'hp_flag': 1,\n",
-    "    'allCam_flag': 0,\n",
+    "    'all_cam_flag': 0,\n",
     "    'tiff_flag': 1,\n",
     "    'imx': 1280,\n",
     "    'imy': 1024,\n",
