--- a/tests/test_corresp.ipynb
+++ b/tests/test_corresp.ipynb
@@ -289,7 +289,7 @@
     "            \"cal/cam4.tif\",\n",
     "        ]\n",
     "        expected.hp_flag = 1\n",
-    "        expected.allCam_flag = 0\n",
+    "        expected.all_cam_flag = 0\n",
     "        expected.tiff_flag = 1\n",
     "        expected.imx = 1280\n",
     "        expected.imy = 1024\n",
