fixed trans_cam_point that should get out the z0 only

--- a/tests/test_corresp.ipynb
+++ b/tests/test_corresp.ipynb
@@ -416,7 +416,7 @@
     "        corrected = match_coords(targs, cpar, cal)\n",
     "\n",
     "        sorted_pos, sorted_corresp, num_targs = py_correspondences(\n",
-    "            img_pts, corrected, cals, vpar, cpar\n",
+    "            img_pts, [corrected], cals, vpar, cpar\n",
     "        )\n",
     "\n",
     "        self.assertEqual(len(sorted_pos), 1)  # 1 camera\n",
